- Retirado arquivos não utilizados - Adicionado fotos de acerto e erro - adicionado botões de paginação

--- a/layout.css
+++ b/layout.css
@@ -60,7 +60,6 @@ body
 #botaoResponder
 {
     color:white;
-    margin-top: 10px;
     border: #fff solid 5px;
     padding: 5px 5px;
     text-align: center;
@@ -71,7 +70,7 @@ body
 
 #botaoResponder p
 {
-	font-size: 30px;
+	font-size: 25px;
 	margin-bottom: 0px;
 }
 
@@ -138,4 +137,21 @@ body
     padding: 10px 30px;
     background-color: rgba(20, 20, 20, 0.9);
     
+}
+
+.botaoLink
+{
+    border: #fff solid 5px;
+    text-align: center;
+    background-color: rgba(120, 20, 20, 0.9);
+    cursor: pointer;
+    font-family: 'Lobster', cursive;
+    padding: 10px 40px;
+    font-size: 25px;
+    display: inline-block;
+}
+
+.botaoLink span
+{
+    color: white;
 }
